# MiniFlow

./: .gitignore  CMakeLists.txt  Common.h  DynamicTensorTest.playlist  NeuralFrameworkTest.playlist  Node.h  README.md  StaticTensorTest.playlist  Tensor.h
DynamicTensor/: DynamicTensor.h  DynamicTensor.vcxproj  DynamicTensor.vcxproj.filters  DynamicTensorTest.cpp
MiniFlow/: Common.h  DynamicTensor.h  Graph.h  MiniFlow.vcxproj  MiniFlow.vcxproj.filters  Node.h  Tensor.h  TensorScalar.h  nn.cpp
MiniFlowTest/: MiniFlowTest.cpp  MiniFlowTest.vcxproj  MiniFlowTest.vcxproj.filters  stdafx.cpp  tensortest.cpp
StaticTensor/: StaticTensor.h  StaticTensor.vcxproj  StaticTensor.vcxproj.filters  StaticTensor2.h  StaticTensorTest.cpp
Tensor/: Tensor.vcxproj  Tensor.vcxproj.filters  TensorTest.h  TensorTestEnv.cpp
src/: Common.h  Graph.h  Node.h  common.h  dynamic_tensor.h  graph.h  nn.cpp  node.h  scalar_tensor.h  tensor.h  tensor_dynamic.h  tensor_scalar.h
test/: nn_test.cpp  tensor_test.cpp
